add dockerfile mariadb and startup.sh

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,9 +1,10 @@
 FROM debian:bookworm
 
+EXPOSE 3306
+
 RUN sudo apt update
 RUN sudo apt install mariadb-server -y
-
-EXPOSE 3306
+run sudo rm -rf /var/lib/apt/lists/*
 
 COPY conf/50-server.cnf /etc/mysql/mariadb.conf.d/
 
