add dockerfile wordpress and soon finish startupsh

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -4,7 +4,7 @@ EXPOSE 3306
 
 RUN sudo apt update
 RUN sudo apt install mariadb-server -y
-run sudo rm -rf /var/lib/apt/lists/*
+RUN sudo rm -rf /var/lib/apt/lists/*
 
 COPY conf/50-server.cnf /etc/mysql/mariadb.conf.d/
 
