--- a/srcs/.env
+++ b/srcs/.env
@@ -1,4 +1,17 @@
-DB="database"
-DB_USER="mpoussie"
-DB_PSW="1234"
-DB_PSW_ROOT="abcd"
+# MariaDB
+SQL_DATABASE=base
+SQL_USER=mpoussie
+SQL_PASSWORD=3076
+SQL_ROOT_PASSWORD=3076
+
+# WordPress
+WORDPRESS_DB_HOST=mariadb
+WORDPRESS_DB_NAME=${SQL_DATABASE}
+WORDPRESS_DB_USER=${SQL_USER}
+WORDPRESS_DB_PASSWORD=${SQL_PASSWORD}
+WORDPRESS_ADMIN_PASSWORD=3076
+WORDPRESS_USER=mpoussie
+WORDPRESS_PASSWORD=3076
+WORDPRESS_ADMIN_USER=mmpoussie
+
+#docker exec -it mariadb mysql -u root -p
